# counting_contract_V2

./: Cargo.toml  README.md
schema/: counting_contract.json
schema/raw/: response_to_value.json
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs
src/multitest/: tests.rs
