[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2.0.2"
serde = "1.0.199"
cw-storage-plus = "2.0.0"
thiserror = "1.0.59"
schemars = "0.8.17"
cosmwasm-schema = "2.0.2"

[dev-dependencies]
cw-multi-test = "2.0.1"